# autodeploy-5

./: .gitignore  MANIFEST.in  README.md  conf.sample  makerpmbuild.sh  pyproject.toml  setup.cfg
rpm/: autodeploy.spec  postinstall  preuninstall
src/: deploy-daemon.py
src/autodeploy/: __init__.py  conf.sample  daemon.py  message.py  repo.py  util.py  webhook.py  webserver.py
src/autodeploy/cgi-example/: deploy-cgi.py
src/autodeploy/systemd/: autodeploy-webd.service  autodeploy-webserver.service  autodeployd.service
src/deploy/: deploy-daemon.py
src/receive/: deploy-cgi.py
systemd/: autodeploy-webserver.service  gitdeploy.service
