[tool.poetry]
name = "autodeploy"
version = "0.1.0"
description = ""
authors = ["William Strecker-Kellogg"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.800"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
