[tool.poetry]
name = "autodeploy"
version = "0.1.0"
description = "An agent to listen for repo webhooks and securely deploy them"
authors = ["William Strecker-Kellogg"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
pylint = "^2.6.0"
rope = "^0.18.0"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
