[metadata]
name = autodeploy
version = 0.0.1
description = An agent to listen for repo webhooks and securely deploy them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.racf.bnl.gov/gitea/willsk/autodeploy-gitea
author = William Strecker-Kellogg
author_email = willsk@bnl.gov
keywords = Git, Deploy, Secure
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src

[flake8]
exclude = .venv,.tox,dist,docs,build,*.egg,redis_install,env,venv,.undodir
