[metadata]
name = autodeploy
version = 0.5.0
description = An agent to listen for repo webhooks and securely deploy them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.racf.bnl.gov/gitea/willsk/autodeploy-gitea
author = William Strecker-Kellogg
author_email = willsk@bnl.gov
keywords = Git, Deploy, Secure
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    =src

[options.packages.find]
where=src

[options.package_data]
* = *.md, conf.sample
bin = example/
systemd/ = unitfiles/

[options.entry_points]
console_scripts =
    autodeployd = autodeploy.daemon:daemon_main
    autodeploy-webd = autodeploy.webserver:daemon_main

[flake8]
exclude = .venv,.tox,dist,docs,build,*.egg,redis_install,env,venv,.undodir
